kanc/src/tests/sample_code/should_fail/single_file/parse/labeled_params/dashed_label.k
type Nat {
    o: Nat,
    s(n: Nat): Nat,
}

let f = fun _(-x~y: Nat): Nat {
    Nat.o
};
